# meds-simd-highlevel-avx2

./: README.md  README_error_report.md
ref/: .gitignore  CMakeLists.txt  Makefile  NIST.cmk  NIST.sh  compile_commands.json  matrixmod.c  matrixmod.h  measure.h  measure.txt  meds.c  params.py  proc_bench.py  test.c  tmp.txt  util.c  util.h  vec.c  vec.h
ref/NIST/: PQCgenKAT_sign.c
ref/include/: bitstream.h  bitstream_batch.h  fips202_vec.h  fips202_x8.h  log.h  matrixmod.h  matrixmod_vec.h  matrixmod_x16.h  measure.h  meds.h  seed.h  util.h  util_vec.h  util_x16.h  vec.h  vec_w32.h  vec_w64.h  vec_x16.h  vec_x8.h
ref/include/MEDS13220/: api.h
ref/include/MEDS134180/: api.h
ref/include/MEDS167717/: api.h
ref/include/MEDS201254/: api.h
ref/include/MEDS41711/: api.h
ref/include/MEDS55604/: api.h
ref/include/MEDS9923/: api.h
ref/include/toy/: api.h
ref/src/: bench.c  bitstream.c  bitstream_batch.c  fips202_vec.c  fips202_x8.c  matrixmod.c  matrixmod_vec.c  matrixmod_x16.c  measure.c  meds.c  seed.c  test.c  util.c  util_vec.c  util_x16.c  vec.c  vec_w32.c  vec_w64.c  vec_x16.c  vec_x8.c
ref/src/NIST/: PQCgenKAT_sign.c
